--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,17 @@
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
-        "barryvdh/laravel-debugbar": "^3.15",
+a        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.22",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
