--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -127,15 +127,15 @@ parameters:
 			path: app/Http/Middleware/HandleInertiaRequests.php
 
 		-
-			message: '#^Parameter \#1 \$string of function str expects string\|null, mixed given\.$#'
+			message: '#^Parameter \#1 \$string of function mb_trim expects string, mixed given\.$#'
 			identifier: argument.type
-			count: 1
+			count: 2
 			path: app/Http/Middleware/HandleInertiaRequests.php
 
 		-
-			message: '#^Parameter \#1 \$string of function trim expects string, mixed given\.$#'
+			message: '#^Parameter \#1 \$string of function str expects string\|null, mixed given\.$#'
 			identifier: argument.type
-			count: 2
+			count: 1
 			path: app/Http/Middleware/HandleInertiaRequests.php
 
 		-
